[project]
name = "smokeping-ha"
version = "1.0.0"
description = "SmokePing to Home Assistant integration - exposes latency data via REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Ryan Planchart" }]
keywords = ["smokeping", "home-assistant", "monitoring", "latency", "rrd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/ryanplanchart/smokeping-ha"
Repository = "https://github.com/ryanplanchart/smokeping-ha"
Issues = "https://github.com/ryanplanchart/smokeping-ha/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "api"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "S104",   # Possible binding to all interfaces (we handle this intentionally)
    "S603",   # subprocess call - we validate inputs
    "S607",   # Starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
mypy_path = ["api"]
exclude = ["^\\.venv", "^\\..+"]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "smokeping_api"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "_pytest.*"]
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"
